mobile bg issue fix backstretcher

--- a/main.css
+++ b/main.css
@@ -9,7 +9,6 @@ html {
   -o-background-size: cover;
   background-size: cover;
   height: 100%;
-  overflow-x: hidden;
 }
 
 body {
